# aoc2023

./: .gitignore  CMakeLists.txt
day1/: CMakeLists.txt  Makefile  main.c
day2/: CMakeLists.txt  main.c
day3/: CMakeLists.txt  main.c
day4/src/: main.rs
utils/: utils.c  utils.h
